small content update

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </span>
 
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -97,7 +97,7 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- Github link -->
                   <span class="link-block">
@@ -159,11 +159,18 @@
 <section class="hero is-small">
   <div class="hero-body">
     <h2 class="title is-3"><p style="text-align:center">Datasets</p></h2>
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <p>
+          To evaluate our proposed framework, we quantitatively compare the mapping performance for both static and dynamic scenes with other frameworks. For static incrementally built scene we use the Cow and Lady dataset. For a dynamic scene, we have created our own Gazebo simulation dataset.
+        </p>
+      </div>
+    </div>
     <div style="display: flex;">
       <div class="center">
         <!-- Arxiv PDF link -->
         <div class="link-block">
-          <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+          <a href="https://projects.asl.ethz.ch/datasets/doku.php?id=iros2017" target="_blank"
           class="external-link button is-normal is-rounded is-dark">
           Cow and Lady
           </a>
@@ -178,7 +185,7 @@
           Gazebo Dynamic
           </a>
         </div>
-        <img src="static/images/cow_lady_gradients.png" style="width:80%" alt="Avatar woman">
+        <img src="static/images/ball_bw.png" style="width:80%" alt="Avatar woman">
       </div>
     </div>
   </div>
