--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3"><p style="text-align:center">Videos</p></h2>      
+      <h2 class="title is-3"><p style="text-align:center">Videos</p></h2>       
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
@@ -290,6 +290,104 @@
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
             <source src="static/videos/Motion_Planning_conv.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video4">
+          <video poster="" id="video4" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/vert_noGrad.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video5">
+          <video poster="" id="video5" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/vert_Grad.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video6">
+          <video poster="" id="item-video6" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/horiz_noGrad.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video7">
+          <video poster="" id="video7" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/horiz_Grad.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video8">
+          <video poster="" id="video8" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/rotate.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video9">
+          <video poster="" id="video9" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/static.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video10">
+          <video poster="" id="video10" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/incrementalDist.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video11">
+          <video poster="" id="video11" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/incrementalGrads.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video12">
+          <video poster="" id="video12" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/VertSweepDist.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video13">
+          <video poster="" id="video13" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/VertSweepGrad.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video14">
+          <video poster="" id="video14" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/cowLady_rotDist.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video15">
+          <video poster="" id="video15" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/cowLady_rotateDistMove.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video16">
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/cowLady_rotateGrads.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video17">
+          <video poster="" id="video17" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/chompExample.mp4"
             type="video/mp4">
           </video>
         </div>
