remove RAL name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="IDMP - RA-L Submission">
+  <meta name="description" content="IDMP">
   <meta property="og:title" content="IDMP"/>
   <meta property="og:description" content="Interactive Distance Field Mapping and Planning to Enable Human-Robot Collaboration"/>
   <meta property="og:url" content="https://uts-ri.github.io/IDMP/"/>
@@ -71,7 +71,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Technical University of Applied Sciences Würzburg-Schweinfurt<br><sup>2</sup>University of Technology Sydney<br>IEEE ROBOTICS AND AUTOMATION LETTERS</span>
+                    <span class="author-block"><sup>1</sup>Technical University of Applied Sciences Würzburg-Schweinfurt<br><sup>2</sup>University of Technology Sydney</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
