--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Usama Ali</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a href="https://ieeexplore.ieee.org/author/37087467330" target="_blank">Lan Wu</a><sup>2*</sup>,</span>
+                  <a href="https://scholar.google.com/citations?user=2oalmUIAAAAJ&hl=en&oi=sra" target="_blank">Lan Wu</a><sup>2*</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Adrian Müller</a><sup>1</sup>,</span>
                   <span class="author-block">
-                    <a href="https://ieeexplore.ieee.org/author/37086937310" target="_blank">Fouad Sukkar</a><sup>2</sup>,</span>
+                    <a href="https://scholar.google.com/citations?user=1rX23ysAAAAJ&hl=en&oi=ao" target="_blank">Fouad Sukkar</a><sup>2</sup>,</span>
                   <span class="author-block">
-                    <a href="https://ieeexplore.ieee.org/author/37550123200" target="_blank">Tobias Kaupp</a><sup>1</sup>,</span>
+                    <a href="https://scholar.google.com/citations?user=auMQ1JQAAAAJ&hl=en&oi=ao" target="_blank">Tobias Kaupp</a><sup>1</sup>,</span>
                   <span class="author-block">
-                    <a href="https://ieeexplore.ieee.org/author/37085384801" target="_blank">Teresa Vidal-Calleja</a><sup>2</sup>
+                    <a href="https://scholar.google.com/citations?user=gokuA08AAAAJ&hl=en&oi=ao" target="_blank">Teresa Vidal-Calleja</a><sup>2</sup>
                   </span>
                   </div>
 
