--- a/index.html
+++ b/index.html
@@ -445,11 +445,20 @@
   </div>
 </footer>
 
-<!-- Statcounter tracking code -->
-  
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
-
-    <!-- End of Statcounter Code -->
+<!-- Default Statcounter code for IDMP-Project Page
+https://uts-ri.github.io/IDMP/ -->
+<script type="text/javascript">
+var sc_project=12984418; 
+var sc_invisible=1; 
+var sc_security="3487ffe3"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="hit counter"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12984418/0/3487ffe3/1/" alt="hit counter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
   </body>
   </html>
