Add google scholar links

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Usama Ali</a><sup>1*</sup>,</span>
+                <a href="https://scholar.google.com/citations?user=xjJhXegAAAAJ&hl=en" target="_blank">Usama Ali</a><sup>1*</sup>,</span>
                 <span class="author-block">
                   <a href="https://scholar.google.com/citations?user=2oalmUIAAAAJ&hl=en&oi=sra" target="_blank">Lan Wu</a><sup>2*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Adrian Müller</a><sup>1</sup>,</span>
+                    <a href="https://scholar.google.com/citations?user=vd0gTJIAAAAJ&hl=en&oi=sra" target="_blank">Adrian Müller</a><sup>1</sup>,</span>
                   <span class="author-block">
                     <a href="https://scholar.google.com/citations?user=1rX23ysAAAAJ&hl=en&oi=ao" target="_blank">Fouad Sukkar</a><sup>2</sup>,</span>
                   <span class="author-block">
