--- a/index.html
+++ b/index.html
@@ -421,7 +421,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+        @misc{ali2024interactive,
+      title={Interactive Distance Field Mapping and Planning to Enable Human-Robot Collaboration}, 
+      author={Usama Ali and Lan Wu and Adrian Mueller and Fouad Sukkar and Tobias Kaupp and Teresa Vidal-Calleja},
+      year={2024},
+      eprint={2403.09988},
+      archivePrefix={arXiv},
+      primaryClass={id='cs.RO' full_name='Robotics' is_active=True alt_name=None in_archive='cs' is_general=False description='Roughly includes material in ACM Subject Class I.2.9.'}}
+      </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
