--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="center">
         <!-- Arxiv PDF link -->
         <div class="link-block">
-          <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+          <a href="https://drive.google.com/file/d/1pLu1bw5k_bogKoMEMdHErIggIJFj3JQt/view?usp=sharing" target="_blank"
           class="external-link button is-normal is-rounded is-dark">
           Gazebo Dynamic
           </a>
