--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="vidcontainer">
     <!-- Paper video. -->
     <div class="hero-body">
-      <iframe src="https://www.youtube.com/embed/NpbDjCqXyrs" frameborder="0"  allowfullscreen class="video"></iframe>
+      <iframe src="https://www.youtube.com/embed/PYYvIsB1XC4" frameborder="0"  allowfullscreen class="video"></iframe>
     </div>
   </div>
 </section>
